--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=s18l3_spring_web_data
+
+# Server Config
+server.port=3001
+
+# DB Config
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://localhost:5432/s18l3_web_data
+spring.datasource.driver=org.postgresql.Driver
+
+# Hibernate Config
+spring.jpa.hibernate.ddl-auto=update
